--- a/Assignment 4/Assignment 4.qmd
+++ b/Assignment 4/Assignment 4.qmd
@@ -34,6 +34,7 @@ library(tidyverse)
 library(tidytext)
 library(stringr)
 library(stopwords)
+library(caTools)
 
 # additional packages here
 ```
@@ -74,41 +75,60 @@ movie_review %$% wordcloud(review,
 ```
 
 # Text pre-processing
+### Train test split
+Before starting text pre-processing steps, we first need to split the train dataset to a sample used for training, a sample used for validation during training and a test sample to check performance after the training is done. We have decided to split the train data 80:10:10 (training: validation: testing)
+```{r}
+# set seed for reproducibility
+set.seed(123)
 
-For better analysis we will further on clean the text from review column based on selected pre-processing methods.
+#first split the full data set in a 80/20 test train set then split the test val data 50/50 so they both become 10% of the full dataset
+train_split <- sample.split(movie_review$sentiment, SplitRatio = 0.8)
+val_split <- sample.split(movie_review$sentiment[!train_split], SplitRatio = 0.5)
+
+# save the row indices that are part of the set
+train_ids <- which(train_split)
+temp_ids <- which(!train_split)
+val_ids <- temp_ids[val_split]
+test_ids <- temp_ids[!val_split]
+
+# final datasets
+train_set <- movie_review[train_ids, ]
+test_set <- movie_review[test_ids, ]
+val_set <- movie_review[val_ids, ]
+```
+For sentimental analysis enhancement we will further on clean the text from review column based on pre-processing methods @selectedbyourgroup.
 But first, we will change sentiment column to factor class:
 
 ```{r}
-movie_review$sentiment <- as.factor(movie_review$sentiment)
-sapply(movie_review, class) #checking the factor change
+train_set$sentiment <- as.factor(train_set$sentiment)
+sapply(train_set, class) #checking the factor change
 ```
 Next, we will remove empty rows with no text or duplicates, which leaves us with 4996 observations.
 
 ```{r}
-movie_review <- movie_review %>% 
+train_set <- train_set %>% 
   filter(!is.na(review)) %>%
   distinct(review, .keep_all = T)
 ```
-Now, we will lowercase all the letters in the texts and remove punctuation:
+Now, we will lowercase all the letters in the texts:
 ```{r}
-clean_movie_review <- movie_review %>%
+clean_train_set <- train_set %>%
   mutate(review = review %>%
       str_to_lower() %>% # induce lowercase
-  str_replace_all("[[:punct:]]", " ") %>% #remove punctuation
   str_squish()) #remove extra space
 ```
 
 Next, we will tokenize review column:
 
 ```{r}
-clean_movie_review <- clean_movie_review |> 
+clean_train_set <- clean_train_set |> 
   unnest_tokens(word, review)
 ```
 
-We then received 1229424 observations from 4996 reviews; now let's see the most common words from our reviews (we use ggplot function):
+We then received 967628 observations from 3997 reviews; now let's see the most common words from our reviews (we use ggplot function):
 
 ```{r}
-clean_movie_review |> 
+clean_train_set |> 
   # count the frequency of each word
   count(word) |> 
   # arrange the words by its frequency in descending order
@@ -129,12 +149,12 @@ stop_words <- c(
   "as", "with", "for", "movie", "but", "film", "you", "he", "his", "are", "have", "be", "one"
 )
 stop_words <- tibble(word=stop_words)
-  clean_movie <- clean_movie_review %>%
+  clean_train <- clean_train_set %>%
     anti_join(stop_words, by = "word")
 ```
-Eventually, we are left with 843586 observations. Let's see our top words now:
+Eventually, we are left with 663508 observations. Let's see our top words now:
 ```{r}
-clean_movie |> 
+clean_train |> 
   # count the frequency of each word
   count(word) |> 
   # arrange the words by its frequency in descending order
@@ -147,30 +167,24 @@ clean_movie |>
   labs(x = "frequency", y="words") + 
   theme_classic()
 ```
-There are still some stop words left, and removing them all manually might be time-consuming. Let's instead use the dataset smart_stopwords from library(stopwords) and modify it with those words that we want to use in the analysis(for example, leaving negative particles to see the negative review sensitivity).
+There are still some stop words left, and removing them all manually might be time-consuming. Let's instead use the dataset smart_stopwords from library(stopwords) and modify it with those words that we want to use in the analysis(for example, leaving negative particles to see the negative review sensitivity). We will also add words to the "stoplist" that don't make sense for our analysis or neutral movie words that don't have sentimental signal:
 
 ```{r}
 smart_stopwords <- stopwords(source = "smart")
 stop_words <- tibble(word=smart_stopwords)
 df_stopwords <- stop_words %>%
-  filter(!word %in% c("neither", "never", "no", "nobody", "non", "none", "not", "nothing", "nowhere", "awfully", "best", "better", "cannot", "least", "less", "like", "little", "serious", "thanks", "welcome", "want", "willing", "will", wish", "without"))
+  filter(!word %in% c("neither", "never", "no", "nobody", "non", "none", "not", "nothing", "nowhere", "awfully", "best", "better", "cannot", "least", "less", "like", "little", "serious", "thanks", "welcome", "want", "willing", "will", "wish", "without")) %>%
+  rbind(tibble(word = c("br", "made", "make", "movie", "film", "films", "movies", "story", "plot",
+  "character", "characters", "people", "show", "watch",
+  "life", "scene", "end", "man", "time")))
 #removing stop words
-  clean_movie <- clean_movie_review %>%
-    anti_join(stop_words, by = "word")
+  clean_train <- clean_train_set %>%
+    anti_join(df_stopwords, by = "word")
 ```
+
+In the end, we received 384141 observations to work with. 
 ```{r}
-smart_stopwords <- stopwords(source = "smart")
-stop_words <- tibble(word=smart_stopwords)
-df_stopwords <-stop_words |>
-  filter(!word %in% c("neither", "never", "no", "nobody", "non", "none", "not", "nothing", "nowhere", "awfully", "best", "better", "cannot", "least", "less", "like", "little", "serious", "thanks", "welcome", "want", "willing", "will", "wish", "without"))
-#removing stop words
-  clean_movie <- clean_movie_review %>%
-    anti_join(stop_words, by = "word")
-  
-```
-In the end, we received 521346 observations to work with. 
-```{r}
-clean_movie |> 
+clean_train |> 
   # count the frequency of each word
   count(word) |> 
   # arrange the words by its frequency in descending order
@@ -182,6 +196,14 @@ clean_movie |>
   geom_col(fill="lightblue") +
   labs(x = "frequency", y="words") + 
   theme_classic()
+```
+Document_term_matrix:
+
+```{r}
+vectorizer = vocab_vectorizer(clean_movie)
+t1 = Sys.time()
+dtm_train = create_dtm(it_train, vectorizer)
+print(difftime(Sys.time(), t1, units = 'sec'))
 ```
 
 # Text representaion
