--- a/Assignment 4/Assignment 4.qmd
+++ b/Assignment 4/Assignment 4.qmd
@@ -43,8 +43,7 @@ library(caTools)
 #| label: data loading
 
 data("movie_review")
-
-# your R code to load the data her
+movie_review <- as_tibble(movie_review)
 ```
 
 ```{r}
@@ -141,7 +140,7 @@ clean_train_set |>
   labs(x = "frequency", y="words") + 
   theme_classic()
 ```
-We see that many of the top words can be considered "stop words" since they bring no significant importance to review meanings, let's remove stop words(except for not because then we can imply useful combinations of words to identify negative or positive meaning:
+We see that many of the top words can be considered "stop words" since they bring no significant importance to review meanings, let's remove stop words(except for not because then we can imply window context words to identify negative or positive meanings of bigger phrases:
 
 ```{r}
 stop_words <- c(
