added some libraries

--- a/Assignment 4/Assignment 4.qmd
+++ b/Assignment 4/Assignment 4.qmd
@@ -25,6 +25,9 @@ execute:
 #| warning: false
 #| message: false
 
+
+library(Rtsne)
+library(topicmodels)
 library(text2vec)
 library(wordcloud)
 library(magrittr)
@@ -223,6 +226,11 @@ dtm_train = create_dtm(it_train, vectorizer)
 Briefly describe your text representation method. (approx. one or two paragraphs)
 
 # Text clustering
+#K-MEANS CLUSTERING
+```{r}
+
+
+```
 
 Briefly describe which models you compare to perform clustering. (approx. two or three paragraphs)
 
@@ -240,6 +248,7 @@ data.frame(
   notes       = c("Some note", "another note")
 )
 ```
+
 
 
 # Team member contributions
